# modules

./: .gitignore  CMakeLists.txt  mkproject.bat
.cmake/: generic-gcc-avr.cmake
Modules/: defaultDocuTarget.cmake
any/: CMakeLists.txt  demo.cpp  demo.h  lib.h  micros.cpp  micros.h  millis.h
atlib/atlib/: CMakeLists.txt
atlib/atlib/inc/: at.hpp
atlib/atlib/inc/at/: analog.hpp  config.hpp  digital.hpp  io.hpp  pin.hpp  sleep.hpp  stream.hpp  uart.hpp
atlib/atlib/inc/at/driver/: ACS712.hpp  AD9850.hpp  HD44780.hpp
atlib/atlib/inc/at/tools/: ammeter.hpp  voltmeter.hpp
atlib/atlib/src/: io.cpp  software_uart.cpp  uart.cpp
atlib/atlib/src/driver/: ACS712.cpp  AD9850.cpp  HD44780.cpp
automaton/: CMakeLists.txt
automaton/examples/blink_modular/: Atm_blink.cpp  Atm_blink.h
automaton/examples/knight_rider2/: Atm_sweep.cpp  Atm_sweep.h
automaton/src/: Atm_analog.cpp  Atm_analog.hpp  Atm_bit.cpp  Atm_bit.hpp  Atm_button.cpp  Atm_button.hpp  Atm_command.cpp  Atm_comparator.cpp  Atm_comparator.hpp  Atm_controller.cpp  Atm_controller.hpp  Atm_digital.cpp  Atm_digital.hpp  Atm_encoder.cpp  Atm_encoder.hpp  Atm_fade.cpp  Atm_fade.hpp  Atm_fan.cpp  Atm_led.cpp  Atm_led.hpp  Atm_player.cpp  Atm_player.hpp  Atm_step.cpp  Atm_step.hpp  Atm_timer.cpp  Atm_timer.hpp  Automaton.cpp  Automaton.h  CMakeLists.txt  Machine.cpp  Machine.hpp  WMath.cpp  atm_connector.cpp  atm_connector.hpp  atm_counter.hpp  atm_fast_helpers.hpp  atm_serial_debug.hpp  atm_timer_millis.cpp  atm_timer_millis.hpp
nova/: CMakeLists.txt  demo.cpp  demo.h  lib.h
pt/: CMakeLists.txt  Protothread.h
tiny/: CMakeLists.txt  tinyfsm.h
tux/: CMakeLists.txt  dhcp_client.c  dhcp_client.h  dnslkup.c  dnslkup.h  enc28j60.c  enc28j60.h  ip_arp_udp_tcp.c  ip_arp_udp_tcp.h  ip_config.h  mqtt_client.h  net.h  timeout.h  websrv_help_functions.c  websrv_help_functions.h
